finished the js code

--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
                     <option value="TRY">TRY</option>
                     <option value="BTC">BTC</option>
                 </select>
-            </label>
-            <label for="comp-amn">
-                Converted Value:
-                <input class="comp-amn" type="text" name="comp-amn">
+                to:
                 <select name="comp-cry" class="comp-cry">
                     <option value="EUR">EUR</option> 
                     <option value="USD">USD</option>
@@ -44,6 +41,7 @@
             </label>
             <button>CONVERT</button>
         </form>
+        <h2 class="converted-value">The converted value is 10 EUR</h2>
         <p>Supported Currencies</p>
         <p>Euro - EUR, USD - US Dollar, RON - Romanian Lion, PLN - Polish Zloty, CAD - 	Canadian Dollar, MDL - Moldovan Lion, MXN - Mexican Peso, RUB - Russian Ruble, TRY - Turkish New Lira, BTC - Bitcoin</p>
     </div>
